@@ -36,6 +36,8 @@ tasks {
           "--add-exports",
           "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
           "--add-exports",
+          "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+          "--add-exports",
           "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
           "--add-exports",
           "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
@@ -58,6 +60,11 @@ tasks.withType<Test>().configureEach {
   jvmArgs("--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED")
   jvmArgs("--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED")
   jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
+}
+
+tasks.withType<Javadoc>().configureEach {
+  // using com.sun.tools.javac.api.JavacTrees breaks javadoc generation
+  enabled = false
 }
 
 // Our conventions apply this project as a dependency in the errorprone configuration, which would cause
